# bilionrows

./: .gitignore  Makefile  README.md  pyproject.toml
dashboard/: dashboard.py
data/: measurements.parquet
src/: create_measurements.py  using_duckdb.py  using_pandas.py  using_polars.py  using_python.py
